ページネーションを作成

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -29,3 +29,11 @@ ja:
         name: "ユーザ名"
         email: "メールアドレス"
         password: "パスワード"
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
+
