--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,8 +22,8 @@ ja:
       # not_found: "not found"
       # not_locked: "was not locked"
       not_saved: 
-        one: "エラーが発生しました。以下ご確認お願いします。"
-        other: "エラーが発生しました。以下ご確認お願いします。"
+        one: "エラーが発生しました"
+        other: "エラーが発生しました"
         
   activerecord:
     attributes:
